[package]
name = "peroxide"
version = "0.1.0"
authors = ["rumblefrog <contact@rumblefrog.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
bytes = "1"
prost = "0.7"

[build-dependencies]
prost-build = "0.7"
