[package]
name = "chlorate"
version = "0.1.5"
authors = ["rumblefrog <contact@rumblefrog.me>"]
repository = "https://github.com/rumblefrog/chlorate"
documentation = "https://docs.rs/chlorate"
license = "BSD-3-Clause"
description = """
FFI bindings to libsoda.
"""
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
prost = "0.7"

[build-dependencies]
prost-build = "0.7"
